--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,10 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
-tensorflow = "^2.8.0"
+tensorflow = "^2.10.0"
 
 [tool.poetry.dev-dependencies]
+poetry = "^1.2.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
