--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,12 +11,12 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.11"
-tensorflow = "^2.10.1"
+python = ">=3.7,<4.0"
+tensorflow = {version = "^2.11.0", python = ">=3.9,<3.11"}
 feedparser = "^6.0.10"
 
 [tool.poetry.dev-dependencies]
-poetry = "^1.2.2"
+poetry = "^1.3.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
