--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,8 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<4.0"
-tensorflow = {version = "^2.11.0", python = ">=3.9,<3.11"}
+python = ">=3.8,<3.12"
+tensorflow = {version = "^2.12.0rc0", allow-prereleases=true}
 feedparser = "^6.0.10"
 
 [tool.poetry.dev-dependencies]
