--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,11 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
-tensorflow = {version = "^2.12.0rc0", allow-prereleases=true}
+tensorflow = "^2.12.0"
 feedparser = "^6.0.10"
 
 [tool.poetry.dev-dependencies]
-poetry = "^1.3.2"
+poetry = "^1.4.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
