--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,8 @@ python = ">=3.10,<3.15"
 tensorflow = "^2.19.0"
 feedparser = "^6.0.11"
 
-[tool.poetry.dev-dependencies]
-poetry = "^1.8.5"
+[tool.poetry.group.dev.dependencies]
+poetry = "^2.1.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
